# tellm

./: .gitignore  README.md  assistant.py  hassistant.py  pyproject.toml
docs/: docs.md  ideas.md
src/tellm/: assistant.py  model.py
