[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tellm"
version = "0.0.1"
authors = [
  { name="Peter Dobosi", email="dobosipeter96@gmail.com" },
]
description = "Query LLMs from your terminal through an inference provider."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dobosipeter/tellm"
